# Redis_NBP

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  scrapper.py  streamlit_app.py  vectorstore_manager.py
Projekat_1/: .gitignore  Dockerfile  config.py  docker-compose.yml  main.py  requirements.txt  schema.yaml
Projekat_1/app/: chat.py  config.py  main.py  utils.py
app/: config.py  main.py  models.py
app/graph/: builder.py  nodes.py  state.py
app/repository/: chat_repository.py  recipe_repository.py
app/routers/: chat.py  conversations.py  recipes.py
app/services/: parser.py  vectorstore.py
browser_extension/: background.js  content.js  manifest.json  popup.css  popup.html  popup.js
